test/expected/explain_pau-c.out
explain auto *p
             ^
14: error: "auto" with pointer declarator not supported in C
